--- a/style2.css
+++ b/style2.css
@@ -2,13 +2,13 @@ body{
     background-color: rgb(127,64,152)
 }
 .paragraph{
-    text-align: center;
-    color: white;
-    border: 1px solid ;
+  display: flex;
+  color: white;
   width: 40%;
-  margin-left: 30%;
-  border-radius: 15px;
-  box-shadow: 3cap;
+ /* gap: 100px; */
+ margin-left: 10%;
+ justify-content: space-between;
+ gap: 200px;
 }
 h2{
     text-align: center;
@@ -16,8 +16,146 @@ h2{
     font-size: 300%;
 }
 p{
-    font-size: 120%;
+    font-size: 140%;
 }
 h3{
-    font-size: 150%;
+    font-size: 170%;
+    color: #000;
+}
+.Trevor-image{
+ width: 3000%;
+ object-fit: cover;
+margin-top: 40%;
+}
+@media (max-width:280px){
+    .paragraph{
+        display: flex;
+        flex-direction: column;
+      }
+      .Trevor-image{
+        width: 100%;
+        object-fit: cover;
+       }
+       h2{
+        text-align: center;
+        color: white;
+        font-size: 100%;
+    }
+    p{
+        font-size: 70%;
+
+    }
+    h3{
+        font-size: 90%;
+    }
+
+
+}
+
+@media (min-width:281px) and (max-width:360px){
+    .paragraph{
+        display: flex;
+        flex-direction: column;
+      }
+      .Trevor-image{
+        width: 100%;
+        object-fit: cover;
+       }
+       h2{
+        text-align: center;
+        color: white;
+        font-size: 100%;
+    }
+    p{
+        font-size: 90%;
+    }
+    h3{
+        font-size: 90%;
+    }
+
+
+}
+@media (min-width:361px) and (max-width:480px){
+    .paragraph{
+        display: flex;
+        flex-direction: column;
+      }
+      .Trevor-image{
+        width: 100%;
+        object-fit: cover;
+       }
+       h2{
+        text-align: center;
+        color: white;
+        font-size: 100%;
+    }
+    p{
+        font-size: 100%;
+    }
+    h3{
+        font-size: 90%;
+    }
+
+
+}
+@media  (min-width:481px) and   (max-width:564px){
+    .paragraph{
+        display: flex;
+        flex-direction: column;
+      }
+      .Trevor-image{
+        width: 100%;
+        object-fit: cover;
+       }
+      h2{
+        text-align: center;
+        color: white;
+        font-size: 100%;
+    }
+    p{
+        font-size: 100%;
+    }
+    h3{
+        font-size: 90%;
+    }
+
+
+}
+@media  (min-width:565px) and   (max-width:764px){
+    .paragraph{
+        display: flex;
+        flex-direction: column;
+      }
+      h2{
+        text-align: center;
+        color: white;
+        font-size: 100%;
+    }
+    p{
+        font-size: 100%;
+    }
+    h3{
+        font-size: 90%;
+    }
+
+
+}
+@media  (min-width:765px) and   (max-width:1024px){
+    .paragraph{
+        display: flex;
+        flex-direction: column;
+      }
+      h2{
+        text-align: center;
+        color: white;
+        font-size: 100%;
+    }
+    p{
+        font-size: 100%;
+    }
+    h3{
+        font-size: 90%;
+    }
+
+
 }
