--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ button a{
     justify-content: space-between;
     opacity: inherit;
     margin-top: 0px;
-    /* background-color: #000; */
+    background-color: #000;
 }
 nav a{
     text-decoration: none;
@@ -302,8 +302,8 @@ nav ul{
    
 }
 .header-image{
-    width: 100%;
-    height: 15vh;
+    width: 80%;
+    height: 9vh;
 }
 .dropdown { 
     display: inline-block; 
