--- a/style1.css
+++ b/style1.css
@@ -6,7 +6,7 @@ body{
     min-height: 100vh;
     /* background-color: rgb(127,64,152); */
     color: #000;
-    padding-top: 4%;
+    padding-top: 3%;
     padding-left: 10%;
     text-align: center;
 }
@@ -60,8 +60,9 @@ nav ul{
     gap: 50px;
     font-size: 120%;
     background-color: #000;
-    height: 9vh;
-    padding-top: 30px;
+    height: 4vh;
+    padding-bottom: 10px;
+    padding-top: 10px;
     
 }
 
